# spectral-explain

./: .gitignore  README.md  drop_1736638228.pkl  drop_1736639448.pkl  drop_1736640885.pkl  drop_1736643416.pkl  drop_1736726599.pkl  environment.yml  pyproject.toml  run_parallel.py  sentiment_1736579543.pkl  sentiment_1736579589.pkl  sentiment_1736581060.pkl  support_recovery.py
baselines/amp/: AMPSolver.py
data/: dataloader.py  fake_riddles.json  medqa.txt  puzzles.csv  race-mini.txt  reviews-mini.txt  reviews.txt  riddles.csv  sentiment.csv  sentiment_mini.csv  stanford-reviews.txt  sts16.txt  visualqa.json
data/datasets/: race.txt  sts16-mini.txt
experiments/: collect_data.py  context_cite.ipynb  context_cite_results.ipynb  context_citer_data_utils.py  copy_remote_results.py  dataloader.py  evaluate_sentiment.ipynb  experiment_utils.py  faithfulness.py  generative_outputs.py  measure_r2.py  modelloader.py  recall.py  removal.py  run_parallel.py  subtract.py
experiments/case_studies/: puzzles.ipynb
experiments/notebooks/: context_cite_results.ipynb
experiments/plotting/: plotting.ipynb
experiments/results/sentiment/: sentiment_mini_interactions_5.pkl  sentiment_subtract_large.pkl  sentiment_subtract_small.pkl
models/: modelloader.py
qsft/: BCH.py  input_signal_subsampled.py  qsft.py  reconstruct.py  utils.py
results/: drop_faith_4.pkl  drop_faith_6.pkl  drop_faith_8.pkl  drop_subtract_range(128,255).pkl  drop_subtract_range(32,63).pkl  drop_subtract_range(64,127).pkl  hotpotqa_faith_4.pkl  hotpotqa_faith_6.pkl  hotpotqa_faith_8.pkl  hotpotqa_subtract_range(32,63).pkl  hotpotqa_subtract_range(64,127).pkl  sentiment_faithfulness_1738291318 (1).pkl
results/sentiment/: sentiment_faithfulness.pkl
src/spectral_explain/: dataloader.py  support_recovery.py  utils.py
src/spectral_explain/baselines/: neural_network.py
src/spectral_explain/baselines/amp/: AMPSolver.py
src/spectral_explain/models/: modelloader.py
src/spectral_explain/qsft/: qsft.py
src/spectralexplain/: explainer.py  interactions.py  support_recovery.py  utils.py
src/spex/: Explainer.py  Interactions.py  __init__.py  dataloader.py  modelloader.py  support_recovery.py  utils.py
src/spex/qsft/: qsft.py  query.py
