[tool.poetry]
name = "spectral-explain"
version = "0.1.0"
description = ""
authors = ["Landon Butler, Efe Erginbas, Justin Kang, Abhineet Agarwal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
numpy = "^1.22"
pandas = "^2.2.2"
galois = "0.4.2"
matplotlib = "^3.9"
shap = "*"
openml = "^0.15.0"
xgboost = "^2.1.2"
transformers = "^4.46.1"
torch = "^2.5.1"
nltk = "^3.9.1"
mujoco-py = "^2.1.2"
celer = "^0.7.1"
dill = "^0.3.8"
#bitsandbytes = "^0.42.0"
#datasets = "^2.15.0"
#accelerate = "^0.24.0"

[tool.poetry.dev-dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"